:baby_bottle: edit docs

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -903,7 +903,7 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
-<td style="text-align:center">501</td>
+<td style="text-align:center">502</td>
 <td style="text-align:center">Datetime</td>
 <td style="text-align:center">日期</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/datetime.html">https://feui.gitee.io/docs/feui/guide/component/datetime.html</a></td>
@@ -911,11 +911,19 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
-<td style="text-align:center">501</td>
+<td style="text-align:center">503</td>
 <td style="text-align:center">Dialog</td>
 <td style="text-align:center">弹框</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/dialog.html">https://feui.gitee.io/docs/feui/guide/component/dialog.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/dialog">https://feui.gitee.io/#/dialog</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">504</td>
+<td style="text-align:center">Loading</td>
+<td style="text-align:center">加载</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/loading.html">https://feui.gitee.io/docs/feui/guide/component/loading.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/loading">https://feui.gitee.io/#/loading</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
