:baby_bottle: add new docs picker

--- a/docs/feui/guide/component/loading.html
+++ b/docs/feui/guide/component/loading.html
@@ -593,7 +593,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/loading.html" class="sidebar-link current new">Loading 加载中</a>
+      <a href="/docs/feui/guide/component/loading.html" class="sidebar-link current">Loading 加载中</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/picker.html" class="sidebar-link new">Picker 选择</a>
     </li>
   
     
@@ -702,6 +716,8 @@
         
           <span>← <a href="/docs/feui/guide/component/dialog.html">Dialog 弹窗</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/picker.html">Picker 选择</a> →</span>
         
       </div>
     
