--- a/docs/feui/guide/component/picker.html
+++ b/docs/feui/guide/component/picker.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Countup 数字滚动 — Feui</title>
+    <title>Picker 选择 — Feui</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
     <link rel="icon" href="/docs/images/favicon.ico" type="image/x-icon">
@@ -395,7 +395,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/countup.html" class="sidebar-link current">Countup 数字滚动</a>
+      <a href="/docs/feui/guide/component/countup.html" class="sidebar-link">Countup 数字滚动</a>
     </li>
   
     
@@ -607,7 +607,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/picker.html" class="sidebar-link new">Picker 选择</a>
+      <a href="/docs/feui/guide/component/picker.html" class="sidebar-link current new">Picker 选择</a>
     </li>
   
     
@@ -634,21 +634,18 @@
 
 
 
-<div  id='content' class="content guide with-sidebar countup-guide">
+<div  id='content' class="content guide with-sidebar picker-guide">
   <div class='content_box'>
     
-      <h1>Countup 数字滚动</h1>
+      <h1>Picker 选择</h1>
     
     <div id='pContent'>
-      <p><a href="https://feui.gitee.io/#/countup">Live Demo&gt;&gt;</a></p>
-<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Countup &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Countup.name]: Countup</div><div class="line">&#125;,</div><div class="line">data () &#123;</div><div class="line">  <span class="keyword">return</span> &#123;</div><div class="line">    doStart: <span class="literal">false</span>,</div><div class="line">    doReset: <span class="literal">false</span>,</div><div class="line">    options: &#123;</div><div class="line">      useEasing: <span class="literal">true</span>,</div><div class="line">      useGrouping: <span class="literal">true</span>,</div><div class="line">      separator: <span class="string">''</span>,</div><div class="line">      decimal: <span class="string">'.'</span>,</div><div class="line">      prefix: <span class="string">'￥'</span>,</div><div class="line">      suffix: <span class="string">'元'</span></div><div class="line">    &#125;</div><div class="line">  &#125;</div><div class="line">&#125;,</div><div class="line">methods:&#123;</div><div class="line">  doResetFn:<span class="function"><span class="keyword">function</span>(<span class="params">params</span>) </span>&#123;</div><div class="line">    <span class="keyword">this</span>.doReset=<span class="literal">true</span>;</div><div class="line">    <span class="keyword">this</span>.doStart=<span class="literal">false</span>;</div><div class="line">  &#125;,</div><div class="line">  callback:<span class="function"><span class="keyword">function</span>(<span class="params">ins</span>)</span>&#123;</div><div class="line">    <span class="built_in">console</span>.log(ins.endVal)</div><div class="line">    Toast.success(&#123;</div><div class="line">      duration: <span class="number">1500</span>,</div><div class="line">      message: <span class="string">'滚完了'</span></div><div class="line">    &#125;)</div><div class="line">  &#125;,</div><div class="line">  callback1:<span class="function"><span class="keyword">function</span>(<span class="params"></span>)</span>&#123;</div><div class="line">    Toast.success(&#123;</div><div class="line">      duration: <span class="number">1500</span>,</div><div class="line">      message: <span class="string">'点击成功鸟'</span></div><div class="line">    &#125;)</div><div class="line">  &#125;</div><div class="line">&#125;</div></pre></td></tr></table></figure>
-<figure class="highlight css"><table><tr><td class="code"><pre><div class="line"><span class="selector-class">.demo1</span> &#123;</div><div class="line">  <span class="attribute">font-family</span>: <span class="string">'Source Sans Pro'</span>, Helvetica, Arial, sans-serif;</div><div class="line">  <span class="attribute">font-size</span>: <span class="number">6em</span>;</div><div class="line">  <span class="attribute">color</span>: <span class="number">#4a90e2</span>;</div><div class="line">&#125;</div></pre></td></tr></table></figure>
-<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="基础用法-从小到大"><a href="#基础用法-从小到大" class="headerlink" title="基础用法(从小到大)"></a>基础用法(从小到大)</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-countup</span> <span class="attr">:start-val</span>=<span class="string">"1"</span> <span class="attr">:end-val</span>=<span class="string">"1388"</span> </span></div><div class="line"><span class="tag">  <span class="attr">:duration</span>=<span class="string">"2"</span> <span class="attr">class</span>=<span class="string">"demo1"</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-countup</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="倒着用见过没-从大到小"><a href="#倒着用见过没-从大到小" class="headerlink" title="倒着用见过没(从大到小)"></a>倒着用见过没(从大到小)</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-countup</span> <span class="attr">:start-val</span>=<span class="string">"1388"</span> <span class="attr">:end-val</span>=<span class="string">"1"</span> </span></div><div class="line"><span class="tag">  <span class="attr">:duration</span>=<span class="string">"2"</span> <span class="attr">class</span>=<span class="string">"demo1"</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-countup</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="保留小数"><a href="#保留小数" class="headerlink" title="保留小数"></a>保留小数</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-countup</span> <span class="attr">:end-val</span>=<span class="string">"88.88"</span> <span class="attr">:duration</span>=<span class="string">"3"</span> </span></div><div class="line"><span class="tag">  <span class="attr">:decimals</span>=<span class="string">"2"</span> <span class="attr">class</span>=<span class="string">"demo1"</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-countup</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="开始-复位"><a href="#开始-复位" class="headerlink" title="开始/复位"></a>开始/复位</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-countup</span> <span class="attr">:end-val</span>=<span class="string">"1024"</span> <span class="attr">:duration</span>=<span class="string">"3"</span> </span></div><div class="line"><span class="tag">  <span class="attr">:start</span>=<span class="string">"doStart"</span> <span class="attr">class</span>=<span class="string">"demo1"</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-countup</span>&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">br</span> /&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">div</span> <span class="attr">style</span>=<span class="string">"margin:20px;"</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-button</span> @<span class="attr">click.native</span>=<span class="string">"doStart=true"</span> </span></div><div class="line"><span class="tag">  <span class="attr">type</span>=<span class="string">"primary"</span>&gt;</span>Start<span class="tag">&lt;/<span class="name">fe-button</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">fe-button</span> @<span class="attr">click.native</span>=<span class="string">"doResetFn"</span> </span></div><div class="line"><span class="tag">  <span class="attr">type</span>=<span class="string">"primary"</span>&gt;</span>Reset<span class="tag">&lt;/<span class="name">fe-button</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">div</span>&gt;</span></div></pre></td></tr></table></figure>
-<h4 id="综合Demo"><a href="#综合Demo" class="headerlink" title="综合Demo"></a>综合Demo</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">fe-countup</span> <span class="attr">:end-val</span>=<span class="string">"10000"</span> <span class="attr">:duration</span>=<span class="string">"1"</span> </span></div><div class="line"><span class="tag">  <span class="attr">:decimals</span>=<span class="string">"2"</span> <span class="attr">class</span>=<span class="string">"demo1"</span> </span></div><div class="line"><span class="tag">  <span class="attr">:options</span>=<span class="string">'options'</span> <span class="attr">:callback</span>=<span class="string">'callback'</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-countup</span>&gt;</span></div></pre></td></tr></table></figure>
-<p><br></p>
+      <p><a href="https://feui.gitee.io/#/picker">Live Demo&gt;&gt;</a></p>
+<h3 id="使用指南"><a href="#使用指南" class="headerlink" title="使用指南"></a>使用指南</h3><figure class="highlight javascript"><table><tr><td class="code"><pre><div class="line"><span class="keyword">import</span> &#123; Picker &#125; <span class="keyword">from</span> <span class="string">'feui'</span>;</div><div class="line"><span class="keyword">let</span> years = [];</div><div class="line"><span class="keyword">for</span> (<span class="keyword">var</span> i = <span class="number">2000</span>; i &lt;= <span class="number">2030</span>; i++) &#123;</div><div class="line">  years.push(&#123;</div><div class="line">    name: i + <span class="string">"年"</span>,</div><div class="line">    value: i + <span class="string">""</span></div><div class="line">  &#125;);</div><div class="line">&#125;</div><div class="line"></div><div class="line"></div><div class="line">components: &#123;</div><div class="line">  [Picker.name]: Picker,</div><div class="line">&#125;,</div><div class="line">data() &#123;</div><div class="line">  <span class="keyword">return</span> &#123;</div><div class="line">    years: [years],</div><div class="line">    years1: [years, [<span class="number">1</span>, <span class="number">2</span>, <span class="number">3</span>, <span class="number">4</span>, <span class="number">5</span>, <span class="number">6</span>, <span class="number">7</span>, <span class="number">8</span>, <span class="number">9</span>, <span class="number">10</span>, <span class="number">11</span>, <span class="number">12</span>]],</div><div class="line">  &#125;;</div><div class="line">&#125;</div><div class="line">methods: &#123;</div><div class="line">  change(value) &#123;</div><div class="line">    <span class="built_in">console</span>.log(<span class="string">"new Value"</span>, value);</div><div class="line">  &#125;,</div><div class="line">&#125;</div></pre></td></tr></table></figure>
+<h3 id="代码演示"><a href="#代码演示" class="headerlink" title="代码演示"></a>代码演示</h3><h4 id="默认"><a href="#默认" class="headerlink" title="默认"></a>默认</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">divider</span>&gt;</span>默认，不设置默认值时选中第一个 &#123;&#123;year1&#125;&#125;<span class="tag">&lt;/<span class="name">divider</span>&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">fe-picker</span> <span class="attr">:data</span>=<span class="string">'years'</span> <span class="attr">v-model</span>=<span class="string">'year1'</span> </span></div><div class="line"><span class="tag">  @<span class="attr">on-change</span>=<span class="string">'change'</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-picker</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="双向绑定"><a href="#双向绑定" class="headerlink" title="双向绑定"></a>双向绑定</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">divider</span>&gt;</span>双向绑定<span class="tag">&lt;/<span class="name">divider</span>&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">fe-picker</span> <span class="attr">:data</span>=<span class="string">'years'</span> <span class="attr">v-model</span>=<span class="string">'year3'</span> </span></div><div class="line"><span class="tag">  @<span class="attr">on-change</span>=<span class="string">'change3'</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-picker</span>&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">select</span> <span class="attr">v-model</span>=<span class="string">'year5'</span>&gt;</span></div><div class="line">  <span class="tag">&lt;<span class="name">option</span> <span class="attr">v-for</span>=<span class="string">'one in years[0]'</span> <span class="attr">:value</span>=<span class="string">'one.value'</span></span></div><div class="line"><span class="tag">   <span class="attr">:key</span>=<span class="string">'one.index'</span>&gt;</span>&#123;&#123;one.name&#125;&#125;<span class="tag">&lt;/<span class="name">option</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">select</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="非联动多列"><a href="#非联动多列" class="headerlink" title="非联动多列"></a>非联动多列</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">divider</span>&gt;</span>非联动多列<span class="tag">&lt;/<span class="name">divider</span>&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">fe-picker</span> <span class="attr">:data</span>=<span class="string">'years1'</span> <span class="attr">v-model</span>=<span class="string">'year4'</span></span></div><div class="line"><span class="tag">  @<span class="attr">on-change</span>=<span class="string">'change'</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-picker</span>&gt;</span></div></pre></td></tr></table></figure>
+<h4 id="非联动多列-1"><a href="#非联动多列-1" class="headerlink" title="非联动多列"></a>非联动多列</h4><figure class="highlight html"><table><tr><td class="code"><pre><div class="line"><span class="tag">&lt;<span class="name">divider</span>&gt;</span>3列的数据，只显示两列<span class="tag">&lt;/<span class="name">divider</span>&gt;</span></div><div class="line"><span class="tag">&lt;<span class="name">fe-picker</span> <span class="attr">:data</span>=<span class="string">'year7'</span> <span class="attr">:fixed-columns</span>=<span class="string">"2"</span> <span class="attr">:columns</span>=<span class="string">3</span> </span></div><div class="line"><span class="tag">  <span class="attr">v-model</span>=<span class="string">'year8Value'</span> @<span class="attr">on-change</span>=<span class="string">'change'</span>&gt;</span></div><div class="line"><span class="tag">&lt;/<span class="name">fe-picker</span>&gt;</span></div></pre></td></tr></table></figure>
 <h3 id="API"><a href="#API" class="headerlink" title="API"></a>API</h3><table>
 <thead>
 <tr>
@@ -661,31 +658,38 @@
 </thead>
 <tbody>
 <tr>
-<td>start-val</td>
-<td>开始的数字</td>
-<td><code>Number</code></td>
-<td><code>0</code></td>
+<td>value</td>
+<td>表单值，使用 v-model 绑定</td>
+<td><code>Array</code></td>
+<td>-</td>
 <td>-</td>
 </tr>
 <tr>
-<td>end-val</td>
-<td>结束的数字</td>
+<td>data</td>
+<td>选项列表数据</td>
 <td><code>Number</code></td>
-<td><code>0</code></td>
+<td>-</td>
 <td>-</td>
 </tr>
 <tr>
-<td>duration</td>
-<td>持续时间(秒)</td>
+<td>columns</td>
+<td>指定联动模式下的列数，当不指定时表示非联动</td>
 <td><code>Number</code></td>
-<td><code>2</code></td>
+<td>-</td>
 <td>-</td>
 </tr>
 <tr>
-<td>decimals</td>
-<td>小数位数</td>
-<td><code>Number</code></td>
-<td><code>0</code></td>
+<td>fixed-columns</td>
+<td>指定显示多少列，隐藏多余的</td>
+<td><code>Array</code></td>
+<td>-</td>
+<td>-</td>
+</tr>
+<tr>
+<td>column-width</td>
+<td>定义每一列宽度，只需要定义除最后一列宽度，最后一列自动宽度，<br> 比如对于3列选择，可以这样：[1/2, 1/5]</td>
+<td><code>Array</code></td>
+<td>-</td>
 <td>-</td>
 </tr>
 <tr>
@@ -697,69 +701,23 @@
 </tr>
 </tbody>
 </table>
-<p><br></p>
-<h3 id="Options"><a href="#Options" class="headerlink" title="Options"></a>Options</h3><table>
+<h3 id="Events"><a href="#Events" class="headerlink" title="Events"></a>Events</h3><table>
 <thead>
 <tr>
+<th>事件名</th>
 <th>参数</th>
 <th>说明</th>
-<th>类型</th>
-<th>默认值</th>
-<th>可选值</th>
+<th>备注</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td>useEasing</td>
-<td>是否使用缓动动画</td>
-<td><code>Boolean</code></td>
-<td><code>true</code></td>
-<td><code>true</code>,<code>false</code></td>
-</tr>
-<tr>
-<td>easingFn</td>
-<td>缓动动画函数，<code>useEasing</code>为<code>true</code>才有效，可以是贝塞尔方程式推算的结果</td>
-<td><code>Function</code></td>
-<td><code>true</code></td>
-<td><code>true</code>,<code>false</code></td>
-</tr>
-<tr>
-<td>useGrouping</td>
-<td>是否启用数字分组（用逗号隔开）</td>
-<td><code>Boolean</code></td>
-<td><code>true</code></td>
-<td><code>true</code>,<code>false</code></td>
-</tr>
-<tr>
-<td>separator</td>
-<td>数字分组的显示值</td>
-<td><code>String</code></td>
-<td><code>,</code></td>
+<td>on-change</td>
+<td><code>value</code></td>
+<td>选择值变化时触发</td>
 <td>-</td>
 </tr>
 <tr>
-<td>decimal</td>
-<td>小数点的取值（可自定义）</td>
-<td><code>String</code></td>
-<td><code>.</code></td>
-<td>-</td>
-</tr>
-<tr>
-<td>prefix</td>
-<td>显示滚动数字前</td>
-<td><code>String</code></td>
-<td>-</td>
-<td>-</td>
-</tr>
-<tr>
-<td>suffix</td>
-<td>显示滚动数字后</td>
-<td><code>String</code></td>
-<td>-</td>
-<td>-</td>
-</tr>
-<tr>
-<td>-</td>
 <td>-</td>
 <td>-</td>
 <td>-</td>
@@ -767,7 +725,6 @@
 </tr>
 </tbody>
 </table>
-<p><br></p>
 <h3 id="Methods"><a href="#Methods" class="headerlink" title="Methods"></a>Methods</h3><table>
 <thead>
 <tr>
@@ -779,16 +736,10 @@
 </thead>
 <tbody>
 <tr>
-<td>start</td>
+<td>getNameValues</td>
 <td>-</td>
-<td>是否自动开始计数</td>
+<td>根据 value 获取字面值</td>
 <td>-</td>
-</tr>
-<tr>
-<td>reset</td>
-<td>-</td>
-<td>复位/复原/福元</td>
-<td>没错就是福元怎么了</td>
 </tr>
 <tr>
 <td>-</td>
@@ -803,16 +754,14 @@
     
       <div class="guide-links">
         
-          <span>← <a href="/docs/feui/guide/component/checklist.html">Checklist 按钮组</a></span>
+          <span>← <a href="/docs/feui/guide/component/loading.html">Loading 加载中</a></span>
         
-        
-          <span style="float: right;"><a href="/docs/feui/guide/component/flexbox.html">Flexbox 弹性布局</a> →</span>
         
       </div>
     
     <div class="footer">
       文档出现错误或者想参与贡献?
-      <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/component/countup.md" target="_blank">
+      <a href="https://gitee.com/feui/feui-hexo/blob/master/source/feui/guide/component/picker.md" target="_blank">
         在Github编辑此页面!
       </a>
     </div>
