:baby_bottle: add docs popup

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -615,6 +615,20 @@
       
       
       
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/popup.html" class="sidebar-link new">Popup 弹出</a>
+    </li>
+  
+    
+    
+      
+      
+      
         <li><a class='title-18'>Team</a></li>
       
       
@@ -938,6 +952,22 @@
 <td style="text-align:center">加载</td>
 <td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/loading.html">https://feui.gitee.io/docs/feui/guide/component/loading.html</a></td>
 <td style="text-align:left"><a href="https://feui.gitee.io/#/loading">https://feui.gitee.io/#/loading</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">505</td>
+<td style="text-align:center">Picker</td>
+<td style="text-align:center">选择</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/picker.html">https://feui.gitee.io/docs/feui/guide/component/picker.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/picker">https://feui.gitee.io/#/picker</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
+<td style="text-align:center">506</td>
+<td style="text-align:center">Popup</td>
+<td style="text-align:center">弹出</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/popup.html">https://feui.gitee.io/docs/feui/guide/component/popup.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/popup">https://feui.gitee.io/#/popup</a></td>
 <td style="text-align:center">-</td>
 </tr>
 <tr>
