--- a/docs/feui/guide/component/picker.html
+++ b/docs/feui/guide/component/picker.html
@@ -615,6 +615,20 @@
       
       
       
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/popup.html" class="sidebar-link new">Popup 弹出</a>
+    </li>
+  
+    
+    
+      
+      
+      
         <li><a class='title-18'>Team</a></li>
       
       
@@ -738,7 +752,7 @@
 <tr>
 <td>getNameValues</td>
 <td>-</td>
-<td>根据 value 获取字面值</td>
+<td>根据<code>value</code>获取字面值</td>
 <td>-</td>
 </tr>
 <tr>
@@ -756,6 +770,8 @@
         
           <span>← <a href="/docs/feui/guide/component/loading.html">Loading 加载中</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/popup.html">Popup 弹出</a> →</span>
         
       </div>
     
