:baby_bottle: add new docs popuppicker

--- a/docs/feui/guide/component/picker.html
+++ b/docs/feui/guide/component/picker.html
@@ -607,7 +607,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/picker.html" class="sidebar-link current new">Picker 选择</a>
+      <a href="/docs/feui/guide/component/picker.html" class="sidebar-link current">Picker 选择</a>
     </li>
   
     
@@ -621,7 +621,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/popup.html" class="sidebar-link new">Popup 弹出</a>
+      <a href="/docs/feui/guide/component/popup.html" class="sidebar-link">Popup 弹出</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/popuppicker.html" class="sidebar-link new">PopupPicker 弹出选择</a>
     </li>
   
     
