--- a/docs/feui/guide/component/popup.html
+++ b/docs/feui/guide/component/popup.html
@@ -607,7 +607,7 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/picker.html" class="sidebar-link new">Picker 选择</a>
+      <a href="/docs/feui/guide/component/picker.html" class="sidebar-link">Picker 选择</a>
     </li>
   
     
@@ -621,7 +621,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/popup.html" class="sidebar-link current new">Popup 弹出</a>
+      <a href="/docs/feui/guide/component/popup.html" class="sidebar-link current">Popup 弹出</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/popuppicker.html" class="sidebar-link new">PopupPicker 弹出选择</a>
     </li>
   
     
@@ -809,6 +823,8 @@
         
           <span>← <a href="/docs/feui/guide/component/picker.html">Picker 选择</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/popuppicker.html">PopupPicker 弹出选择</a> →</span>
         
       </div>
     
