:baby_bottle: md

--- a/docs/feui/guide/component/component.html
+++ b/docs/feui/guide/component/component.html
@@ -985,6 +985,14 @@
 <td style="text-align:center">-</td>
 </tr>
 <tr>
+<td style="text-align:center">506</td>
+<td style="text-align:center">PopupPicker</td>
+<td style="text-align:center">弹出选择</td>
+<td style="text-align:left"><a href="https://feui.gitee.io/docs/feui/guide/component/popuppicker.html">https://feui.gitee.io/docs/feui/guide/component/popuppicker.html</a></td>
+<td style="text-align:left"><a href="https://feui.gitee.io/#/popuppicker">https://feui.gitee.io/#/popuppicker</a></td>
+<td style="text-align:center">-</td>
+</tr>
+<tr>
 <td style="text-align:center">-</td>
 <td style="text-align:center">-</td>
 <td style="text-align:center">-</td>
