--- a/docs/feui/guide/component/popuppicker.html
+++ b/docs/feui/guide/component/popuppicker.html
@@ -635,7 +635,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/popuppicker.html" class="sidebar-link current new">PopupPicker 弹出选择</a>
+      <a href="/docs/feui/guide/component/popuppicker.html" class="sidebar-link current">PopupPicker 弹出选择</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/scroll.html" class="sidebar-link new">Scroll 滑动加载</a>
     </li>
   
     
@@ -852,6 +866,8 @@
         
           <span>← <a href="/docs/feui/guide/component/popup.html">Popup 弹出</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/scroll.html">Scroll 滑动加载</a> →</span>
         
       </div>
     
