:baby_bottle: add new docs

--- a/docs/feui/guide/component/scroll.html
+++ b/docs/feui/guide/component/scroll.html
@@ -649,7 +649,21 @@
     
     
     <li>
-      <a href="/docs/feui/guide/component/scroll.html" class="sidebar-link current new">Scroll 滑动加载</a>
+      <a href="/docs/feui/guide/component/scroll.html" class="sidebar-link current">Scroll 滑动加载</a>
+    </li>
+  
+    
+    
+      
+      
+      
+      
+      
+      
+    
+    
+    <li>
+      <a href="/docs/feui/guide/component/slidbtn.html" class="sidebar-link new">Slidbtn 滑动操作</a>
     </li>
   
     
@@ -733,6 +747,8 @@
         
           <span>← <a href="/docs/feui/guide/component/popuppicker.html">PopupPicker 弹出选择</a></span>
         
+        
+          <span style="float: right;"><a href="/docs/feui/guide/component/slidbtn.html">Slidbtn 滑动操作</a> →</span>
         
       </div>
     
